@@ -1,3 +1,13 @@
+2012-06-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	Rename AbsWordSeg members 'sen', len' to sensible names.
+
+	* src/abswordseg.h (class AbsWordSeg):
+	* src/abswordseg.cpp:
+	* src/longwordseg.cpp:
+	* src/maxwordseg.cpp:
+	  - Rename AbsWordSeg::{sen,len} to 'text' and 'textLen' respectively.
+
 2012-06-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	Source clean up.
